--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,17 +27,20 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Moabi integration
+        with: # Set the secret as an input
+          moabi_host: ${{ secrets.MOABI_HOST }}
+          moabi_api_key: ${{ secrets.MOABI_API_KEY }}
         run: |
           echo "Running unit tests..."
           make
-          curl -X "POST" "https://${MOABI_HOST}/api/uploads" -H "accept: application/ld+json" -H "apikey: ${MOABI_API_KEY}" -H "Content-Type: multipart/form-data" -F "software=@./hello" -o moabi.id.json
+          curl -X "POST" "https://${moabi_host}/api/uploads" -H "accept: application/ld+json" -H "apikey: ${moabi_api_key}" -H "Content-Type: multipart/form-data" -F "software=@./hello" -o moabi.id.json
           BINARYID=`grep "[0-9a-f]*-[0-9a-f]*-[0-9a-f]*-[0-9a-f]*-[0-9a-f]*" -o moabi.id.json`
           echo "UUID ${BINARYID}"
           echo "Waiting on ${BINARYID}"
           MOABISTATUS="INITIAL"
           while [ "$MOABISTATUS" != "SCANNED" ] ; do
           sleep 60
-          curl -X "GET" "https://${MOABI_HOST}/api/uploads/${BINARYID}" -H "accept: application/ld+json" -H "apikey: ${MOABI_API_KEY}" -o moabi.status.json
+          curl -X "GET" "https://${moabi_host}/api/uploads/${BINARYID}" -H "accept: application/ld+json" -H "apikey: ${moabi_api_key}" -o moabi.status.json
           MOABISTATUS="$(cat moabi.status.json| tr ',' "\n" | grep status |awk -F "\:" '{print $2}'|tr -d '"')"
           echo "CURRENT STATUS '${MOABISTATUS}'"
           done
