--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+# Github Action pipeline demo : integration with the MOABI REST API
 
 name: CI
 
